Header Information alignment solved

--- a/Styles/Assignment1.css
+++ b/Styles/Assignment1.css
@@ -1,5 +1,6 @@
 * {
     font-family: Arial, Helvetica, sans-serif;
+    margin: 10px;
 }
 
 .profile {
@@ -53,7 +54,13 @@
 }
 
 #Information {
-    font-size: 1.1rem;
+    font-size: 0.8rem;
+    display: flex;
+    justify-content: space-between;
+    list-style-type: none;
+    gap: 8px;
+    font-weight: 700;
+
 }
 
 .Summary {
